--- a/src/app/restrict/expense/list-expenses/list-standard/list-standard.component.html
+++ b/src/app/restrict/expense/list-expenses/list-standard/list-standard.component.html
@@ -5,7 +5,7 @@
 <table class="table table-hover">
     <thead>
     <tr>
-        <th scope="col" style="display:none;">ID</th>
+        <th style="display: none;" scope="col">ID</th>
         <th scope="col">Despesa</th>
         <th scope="col">Tipo</th>
         <th scope="col">Subtipo</th>
@@ -16,7 +16,7 @@
     </thead>
     <tbody>
     <tr *ngFor="let item of expenseList">
-        <td style="display:none;">{{ item.id }}</td>
+        <td style="display: none;">{{ item.expenseId }}</td>
         <td>{{ item.expenseName }}</td>
         <td>{{ item.expenseType }}</td>
         <td>{{ item.expenseSubtype }}</td>
