--- a/src/app/restrict/restrict.component.html
+++ b/src/app/restrict/restrict.component.html
@@ -126,40 +126,17 @@
         <!-- Main Content -->
         <div id="content">
 
-
-    <!-- Topbar -->
-    <nav class="navbar navbar-expand navbar-light bg-dark topbar mb-4 static-top shadow">
-        <!-- Sidebar Toggle (Topbar) -->
-        <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-          <i class="fa fa-bars"></i>
-        </button>
-        <!-- Topbar Search -->
-        <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-          <div class="input-group">
-            <input type="text" class="form-control bg-light border-0 small" 
-            placeholder="Procurar por..." aria-label="Search" aria-describedby="basic-addon2">
-            <div class="input-group-append">
-              <button class="btn btn-primary" type="button">
-                <i class="fas fa-search fa-sm"></i>
+          <!-- Topbar -->
+          <nav class="navbar navbar-expand navbar-light bg-dark topbar mb-4 static-top shadow">
+              <!-- Sidebar Toggle (Topbar) -->
+              <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+                <i class="fa fa-bars"></i>
               </button>
-            </div>
-          </div>
-        </form>
-        <!-- Topbar Navbar -->
-        <ul class="navbar-nav ml-auto">
-          <!-- Nav Item - Search Dropdown (Visible Only XS) -->
-          <li class="nav-item dropdown no-arrow d-sm-none">
-            <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" 
-            role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i class="fas fa-search fa-fw"></i>
-            </a>
-            <!-- Dropdown - Messages -->
-            <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in" 
-            aria-labelledby="searchDropdown">
-              <form class="form-inline mr-auto w-100 navbar-search">
+              <!-- Topbar Search -->
+              <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                 <div class="input-group">
                   <input type="text" class="form-control bg-light border-0 small" 
-                  placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+                  placeholder="Procurar por..." aria-label="Search" aria-describedby="basic-addon2">
                   <div class="input-group-append">
                     <button class="btn btn-primary" type="button">
                       <i class="fas fa-search fa-sm"></i>
@@ -167,75 +144,54 @@
                   </div>
                 </div>
               </form>
-            </div>
-          </li>
-          <!-- Nav Item - User Information -->
-          <div class="row">
-            <div class="col">
-              <div ngbDropdown class="d-inline-block">
-                <button class="btn btn-dark" id="dropdownBasic1" 
-                ngbDropdownToggle>Ben-Vindo {{this.user.username}} &nbsp;&nbsp;<i class="far fa-user-circle"></i>&nbsp;</button>
-                <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-                  <button ngbDropdownItem ><i class="fas fa-user"></i> Perfil</button>
-                  <button ngbDropdownItem><i class="fas fa-cog"></i> Definições</button>
-                  <button ngbDropdownItem routerLink="/"><i class="fas fa-sign-out-alt"></i> Logout</button>
+              <!-- Topbar Navbar -->
+              <ul class="navbar-nav ml-auto">
+                <!-- Nav Item - Search Dropdown (Visible Only XS) -->
+                <li class="nav-item dropdown no-arrow d-sm-none">
+                  <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" 
+                  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-search fa-fw"></i>
+                  </a>
+                  <!-- Dropdown - Messages -->
+                  <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in" 
+                  aria-labelledby="searchDropdown">
+                    <form class="form-inline mr-auto w-100 navbar-search">
+                      <div class="input-group">
+                        <input type="text" class="form-control bg-light border-0 small" 
+                        placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-primary" type="button">
+                            <i class="fas fa-search fa-sm"></i>
+                          </button>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                </li>
+                <!-- Nav Item - User Information -->
+                <div class="row">
+                  <div class="col">
+                    <div ngbDropdown class="d-inline-block">
+                      <button class="btn btn-dark" id="dropdownBasic1" 
+                      ngbDropdownToggle>Ben-Vindo {{username}} &nbsp;&nbsp;<i class="far fa-user-circle"></i>&nbsp;</button>
+                      <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                        <button ngbDropdownItem ><i class="fas fa-user"></i> Perfil</button>
+                        <button ngbDropdownItem><i class="fas fa-cog"></i> Definições</button>
+                        <button ngbDropdownItem routerLink="/"><i class="fas fa-sign-out-alt"></i> Logout</button>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-              </div>
-            </div>
-          </div>
-        </ul>
-      </nav>
-      <!-- End of Topbar -->
+              </ul>
+            </nav>
+            <!-- End of Topbar -->
 
 
-      <!-- Begin Pges Content -->
-      <div class="container-fluid">
-        <router-outlet></router-outlet>
-
-        <!-- change to add expense  -->
-        <!-- <div *ngIf="newExpense">
-          <app-add-expense (expenseToSend)="expenseToReceive($event)"></app-add-expense>
-        </div> -->
-
-        <!-- <div *ngIf="fixedExpense">
-          <app-fixed-expense (expenseToSend)="expenseToReceive($event)"></app-fixed-expense>
-        </div>
-
-        <div *ngIf="variableExpense">
-          <app-variable-expense (expenseToSend)="expenseToReceive($event)"></app-variable-expense>
-        </div>
-
-        <div *ngIf="shortExpense">
-          <app-short-expense></app-short-expense>
-        </div>
-
-        <div *ngIf="longExpense">
-          <app-long-expense ></app-long-expense>
-        </div>
-
-        <div *ngIf="searchAll">
-          <app-list-expenses (expenseId)="getExpensId($event)"></app-list-expenses>
+          <!-- Begin Pges Content -->
+          <div class="container-fluid">
+            <router-outlet></router-outlet>     
 
         </div>
-
-        <div *ngIf="dashbord">
-          <app-charts-tables></app-charts-tables>
-
-        </div>
-
-        <div *ngIf="update">
-          <app-update-expense [updatedExpense]="updateExpense"></app-update-expense>
-
-        </div>
-
-        <div *ngIf="view">
-          <app-view-expense></app-view-expense>
-        </div> -->
-     
-
-    </div>
-</div>
-
-
+     </div>
 
 </div>
