home graphical improvement

--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -1,37 +1,54 @@
 <main id="main">
+
+  <!-- ======= Why Us Section ======= -->
   <section id="why-us" class="why-us">
     <div class="container">
+
       <div class="row">
-        <div class="col-xl-4 col-lg-4">
+        <div class="col-xl-4 col-lg-5" data-aos="fade-up">
           <div class="content">
-            <h3>Porquê  escolher a solução ET-Costs?</h3>
+            <h3>Porquê escolher a solução ET-Costs?</h3>
             <p>
-              ET-Costs, acrómimo para Expense Tracker Costs, é um software que lhe permite gerir as suas despesas 
-              e rendimentos. É uma solução simples que lhe mostra nume outra em várias perspetivas, de que forma 
-              está a gastar o seu dinheiro, comparações entre rendimentos e despesas de forma a que possa tomar 
-              decisões que ajudem o seu orçamento a crescer.
-            </p>
+              ET-Costs, acrómimo de Expense Tracker Costs, é um software de Gestão de rendimentos, que lhe permite 
+              gerir as suas despesas de acordo com os seus rendimentos. </p>
+            <p> É uma solução simples que procura mostrar-lhe de forma simples, se a cadencia com que está a gastar 
+              o seu dinheiro, é acompanhada pelos seus rendimentos. </p>
+            <p>A ET-Costs tem ferramentas que lhe permitem fazer comparações entre rendimentos e despesas de forma 
+              a que possa tomar decisões que ajudem o seu orçamento a ficar mais equilibrado.
+            </p> 
+            <p> Para que possa ter uma ideia do que se passa com os seus rendimentos, a ET-Costs, apresenta-lhe 
+              diferentes tipos de gráficos e de tabelas, para que possa ver o mesmo problema, em várias prespectivas.  
+            </p><br>
           </div>
         </div>
-        <div class="col-xl-4 col-lg-8">
-          <div class="icon-boxes d-flex flex-column">
-              <div class="col-xl-4">
-                <div class="icon-box mt-4">
-                  <i class="fas fa-money-check-alt"><h4>Adicionar Despesa</h4></i>
-                  <p>Existem vários tipos de despesa para que possa separar em grupos</p>
+        <div class="col-xl-8 col-lg-7 d-flex">
+          <div class="icon-boxes d-flex flex-column justify-content-center">
+            <div class="row">
+              <div class="col-xl-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+                <div class="icon-box mt-4 mt-xl-0">
+                  <i class="fas fa-receipt"></i>
+                  <h4>Adicionar Despesas</h4>
                 </div>
               </div>
-              <div class="col-xl-4">
-                <div class="icon-box mt-4">
-                  <i class="fas fa-funnel-dollar"><h4>Adicionar Receita</h4></i>
-                  <p>Para não ser exaustivo, os tipos de receitas são generalizados e apenas representam
-                    rendimentos no seu orçamento
-                  </p>
+              <div class="col-xl-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+                <div class="icon-box mt-4 mt-xl-0">
+                  <i class="fas fa-dollar-sign"></i>
+                  <h4>Adicionar Receitas</h4>
+                </div>
+              </div>
+              <div class="col-xl-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+                <div class="icon-box mt-4 mt-xl-0">
+                  <i class="fas fa-chart-bar"></i>
+                  <h4>&nbsp; Calcular Lucros e Perdas</h4>
                 </div>
               </div>
             </div>
+          </div>
         </div>
       </div>
+
     </div>
   </section>
+
+
 </main>
