--- a/src/app/public/public.component.css
+++ b/src/app/public/public.component.css
@@ -119,7 +119,6 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
-/* Desktop Navigation */
 .nav-menu, .nav-menu * {
   margin: 0;
   padding: 0;
@@ -138,7 +137,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #635551;
   padding: 11px 15px;
   transition: 0.3s;
-  font-size: 14px;
+  font-size: 16px;
   font-family: "Poppins", sans-serif;
 }
 
@@ -444,7 +443,7 @@ section {
 }
 
 .section-bg {
-  background-color: #ebf3f9;
+  background-color: #c1d7e9;
 }
 
 .section-title {
@@ -617,4 +616,8 @@ section {
   background: #99ccff;
   color: #fff;
   text-decoration: none;
+}
+
+.copyright {
+  color: #3366ff;
 }
