--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -25,7 +25,6 @@
         <li routerLinkActive="active"><a routerLink="/sobre" style="cursor: pointer;">Sobre nós</a></li>
         <li routerLinkActive="active"><a routerLink="/servicos" style="cursor: pointer;">Serviços</a></li>
         <li routerLinkActive="active"><a routerLink="/faq" style="cursor: pointer;">FAQs</a></li>
-        <li routerLinkActive="active"><a routerLink="/contactos" style="cursor: pointer;">Contactos</a></li>
       </ul>
     </nav>
   </div>
@@ -51,58 +50,50 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-3 col-md-6 footer-contact">
-          <h3>ET-Costs</h3>
-          <p>Avenida da República 55 <br>Lisboa, 1000-100<br>Portugal <br><br>
-            <strong>Phone:</strong> +351 214712119<br>
-            <strong>Email:</strong> geral@etcosts.com<br></p>
+          <br>
+          <h2>ET-Costs</h2>
         </div>
         <div class="col-lg-2 col-md-6 footer-links">
-          <h4>Useful Links</h4>
+          <h4>Inicio</h4>
           <ul>
             <li><i class="fas fa-chevron-right"></i> <a href="#"> &nbsp;&nbsp;Principal</a></li>
             <li><i class="fas fa-chevron-right"></i> <a href="#"> &nbsp;&nbsp;Sobre Nós</a></li>
-            <li><i class="fas fa-chevron-right"></i> <a href="#"> &nbsp;&nbsp;Serviços</a></li>
-            <li><i class="fas fa-chevron-right"></i> <a href="#"> &nbsp;&nbsp;Portfólio</a></li>
-            <li><i class="fas fa-chevron-right"></i> <a href="#"> &nbsp;&nbsp;Equipa</a></li>
-            <li><i class="fas fa-chevron-right"></i> <a href="#"> &nbsp;&nbsp;Contacto</a></li>
           </ul>
         </div>
-        <div class="col-lg-3 col-md-6 footer-links">
-          <h4>Our Services</h4>
+
+        <div class="col-lg-2 col-md-6 footer-links">
+          <h4>Negócio</h4>
           <ul>
-            <li><i class="fas fa-chevron-right"></i> <a href="#">&nbsp;&nbsp;Controlo de despesas</a></li>
-            <li><i class="fas fa-chevron-right"></i> <a href="#">&nbsp;&nbsp;Controlo de pagamentos</a></li>
-            <li><i class="fas fa-chevron-right"></i> <a href="#">&nbsp;&nbsp;Controlo de receitas</a></li>
-            <li><i class="fas fa-chevron-right"></i> <a href="#">&nbsp;&nbsp;Cativação</a></li>
-            <li><i class="fas fa-chevron-right"></i> <a href="#">&nbsp;&nbsp;Gráficos de despesas</a></li>
-            <li><i class="fas fa-chevron-right"></i> <a href="#">&nbsp;&nbsp;Gráficos de passívos e ativos</a></li>
+            <li><i class="fas fa-chevron-right"></i> <a href="#"> &nbsp;&nbsp;Serviços</a></li>
+            <li><i class="fas fa-chevron-right"></i> <a href="#"> &nbsp;&nbsp;FQ's</a></li>
           </ul>
         </div>
-        <div class="col-lg-4 col-md-6 footer-newsletter">
-          <h4>Subscreva a nossa Newsletter</h4>
-          <div class="footer-contact">
-          <p>Irá receber todas as atualizações disponiveis, bem como novidades ET-Costs</p>
+
+        <div class="col-lg-2 col-md-6 footer-links">
+          <h4>Acessos</h4>
+          <ul>
+            <li><i class="fas fa-chevron-right"></i> <a href="#"> &nbsp;&nbsp;Login</a></li>
+            <li><i class="fas fa-chevron-right"></i> <a href="#"> &nbsp;&nbsp;Criar Conta</a></li>
+          </ul>
         </div>
-          <form action="" method="post">
-            <input type="email" name="email"><input type="submit" value="Subscrever">
-          </form>
+
+
+        <div class="col-lg-2 col-md-6 social-links text-center text-lg-right pt-5 pt-lg-0">
+          <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+          <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
+          <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
         </div>
-      </div>
+        <br>
+        
     </div>
   </div>
-  <div class="container d-lg-flex py-4">
-    <div class="mr-lg-auto text-center text-lg-left">
-      <div class="copyright">
+  <div class="container py-4">
+    <div class="text-center">
+      <div id="copyright" class="copyright">
         &copy; Copyright <strong><span>Marsoft</span></strong>. All Rights Reserved. Designed by Joe Mars
       </div>
     </div>
-    <div class="social-links text-center text-lg-right pt-3 pt-lg-0">
-      <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
-      <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
-      <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
-      <a href="#" class="google-plus"><i class="fab fa-google-plus-g"></i></a>
-      <a href="#" class="linkedin"><i class="fab fa-linkedin"></i></a>
-    </div>
-  </div>
+    
+  </div></div>
 </footer>
 <!-- End Footer -->
