public contents ready

--- a/src/app/public/about/about.component.html
+++ b/src/app/public/about/about.component.html
@@ -1,34 +1,23 @@
 <main id="main">
-<section id="about" class="about section-bg">
+<section id="about" class="about">
       <div class="container">
-
+        <br><br><br>
         <div class="row">
           <div class="col-xl-5 col-lg-6 video-box d-flex justify-content-center align-items-stretch" data-aos="fade-right">
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
           </div>
 
           <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5">
-            <h4 data-aos="fade-up">About us</h4>
-            <h3 data-aos="fade-up">Enim quis est voluptatibus aliquid consequatur fugiat</h3>
-            <p data-aos="fade-up">Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus laudantium. Soluta voluptate sed facere corporis dolores excepturi. Libero laboriosam sint et id nulla tenetur. Suscipit aut voluptate.</p>
-
-            <div class="icon-box" data-aos="fade-up">
-              <div class="icon"><i class="bx bx-fingerprint"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
-            </div>
-
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <div class="icon"><i class="bx bx-gift"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-            </div>
-
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
-              <div class="icon"><i class="bx bx-atom"></i></div>
-              <h4 class="title"><a href="">Dine Pad</a></h4>
-              <p class="description">Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit. Sunt aut deserunt minus aut eligendi omnis</p>
-            </div>
+            <br><br><br>
+            <h2 data-aos="fade-up">Sobre a ET-Costs</h2> <br>
+            <p data-aos="fade-up" style="text-align: justify;">A ET-Costs é um projeto de software criado pela 
+              Marsoft com o objetivo de oferecer aos seus utilizadores um controlo do orçamento familiar. 
+              Este projeto é open source, o que significa que é completamente livre de custos.
+            </p>
+            <p data-aos="fade-up" style="text-align: justify;">
+              A Marsoft reuniu esforços para apresentar um produto que visa colmatar a falta de investimento 
+              na área da gestão orçamental pessoal. Uma pesquisa prévia pelos sites da especialidade 
+              foi o suficiente para se perceber que, apesar de já existirem algumas soluções, todas elas são
+              pagas. A ET-Costs vai permitir-lhe gerir o seu orçamento de forma gratuita.</p>
 
           </div>
         </div>
