--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -35,7 +35,7 @@
 <section id="welcome" class="d-flex flex-column justify-content-center align-items-center">
   <div class="container" data-aos="fade-in">
     <h1>Esta é a ET-Costs</h1>
-    <h2>Oferece-lhe uma solução simples para gerir as suas despesas</h2>
+    <h2>Oferece-lhe uma solução simples e gratuita para gerir as suas despesas</h2>
   </div>
 </section>
 <!-- End Welcome -->
@@ -56,32 +56,32 @@
         <div class="col-lg-2 col-md-6 footer-links">
           <h4>Inicio</h4>
           <ul>
-            <li><i class="fas fa-chevron-right"></i> <a href="#"> &nbsp;&nbsp;Principal</a></li>
-            <li><i class="fas fa-chevron-right"></i> <a href="#"> &nbsp;&nbsp;Sobre Nós</a></li>
+            <li><i class="fas fa-chevron-right"></i> <a routerLink="/principal" style="cursor: pointer;"> &nbsp;&nbsp;Principal</a></li>
+            <li><i class="fas fa-chevron-right"></i> <a routerLink="/sobre" style="cursor: pointer;"> &nbsp;&nbsp;Sobre Nós</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-6 footer-links">
           <h4>Negócio</h4>
           <ul>
-            <li><i class="fas fa-chevron-right"></i> <a href="#"> &nbsp;&nbsp;Serviços</a></li>
-            <li><i class="fas fa-chevron-right"></i> <a href="#"> &nbsp;&nbsp;FQ's</a></li>
+            <li><i class="fas fa-chevron-right"></i> <a routerLink="/servicos" style="cursor: pointer;"> &nbsp;&nbsp;Serviços</a></li>
+            <li><i class="fas fa-chevron-right"></i> <a routerLink="/faq" style="cursor: pointer;"> &nbsp;&nbsp;FQ's</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-6 footer-links">
           <h4>Acessos</h4>
           <ul>
-            <li><i class="fas fa-chevron-right"></i> <a href="#"> &nbsp;&nbsp;Login</a></li>
-            <li><i class="fas fa-chevron-right"></i> <a href="#"> &nbsp;&nbsp;Criar Conta</a></li>
+            <li><i class="fas fa-chevron-right"></i> <a routerLink="/login" style="cursor: pointer;"> &nbsp;&nbsp;Login</a></li>
+            <li><i class="fas fa-chevron-right"></i> <a routerLink="/criar-conta" style="cursor: pointer;"> &nbsp;&nbsp;Criar Conta</a></li>
           </ul>
         </div>
 
 
         <div class="col-lg-2 col-md-6 social-links text-center text-lg-right pt-5 pt-lg-0">
-          <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
+          <a href="https://twitter.com/login?lang=pt" class="twitter"><i class="fab fa-twitter"></i></a>
+          <a href="https://pt-pt.facebook.com/" class="facebook"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/?hl=pt" class="instagram"><i class="fab fa-instagram"></i></a>
         </div>
         <br>
         
